@@ -6,7 +6,7 @@
  *   Author:	Stefan Hundhammer <sh@suse.de>
  *		Parts auto-generated by KDevelop
  *
- *   Updated:	2003-08-26
+ *   Updated:	2004-03-29
  */
 
 
@@ -264,7 +264,7 @@ KDirStatApp::initPacMan( bool enablePacMan )
     {
 	if ( ! _pacMan )
 	{
-	    _pacMan = new KPacMan( toolBar() );
+	    _pacMan = new KPacMan( toolBar(), 16, false, "kde toolbar widget" );
 	    _pacMan->setInterval( PACMAN_INTERVAL );	// millisec
 	    int id = ID_PACMAN;
 	    toolBar()->insertWidget( id, PACMAN_WIDTH, _pacMan );
